--- a/_config.yml
+++ b/_config.yml
@@ -11,3 +11,4 @@ twitter_username: calebjwales # DO NOT include the @ character, or else the buil
 github_username:  calebjwales # DO NOT include the @ character, or else the build will fail!
 
 show_excerpts: true # set to false to remove excerpts on the homepage
+theme: minima
